--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">PickleTV</string>
+    <string name="privacy_policy_url">https://tv.dilly.cloud/privacy</string>
 </resources>
