--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
-    <string name="app_name">PickleTV</string>
+    <string name="app_name">dil.map</string>
+    <string name="company_name">Dilworth Creative LLC</string>
+    <string name="copyright">© 2025 Dilworth Creative LLC. All rights reserved.</string>
     <string name="privacy_policy_url">https://tv.dilly.cloud/privacy</string>
 </resources>
